kubernetes/heimdall/overlays/k3s/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: heimdall
  labels:
    app.kubernetes.io/instance: heimdall
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-traefik
  namespace: heimdall
  labels:
    app.kubernetes.io/instance: heimdall
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`heimdall.k3s.arthurvardevanyan.com`)
      kind: Rule
      services:
        - name: heimdall
          port: 443
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: heimdall
  name: heimdall-https
  namespace: heimdall
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`heimdall.k3s.arthurvardevanyan.com`)"
      kind: Rule
      services:
        - name: heimdall
          scheme: https
          port: 443
  tls:
    domains:
      - main: heimdall.k3s.arthurvardevanyan.com
